--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -24,6 +24,7 @@ jobs:
             cd /home/${{ secrets.SSH_USER }}/aed-mapa-dev/
             git pull
             rsync --update --recursive --delete \
-              --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude '*.json' \
+              --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
+              --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' \
               --verbose /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /var/www/dev/
           EOF
