--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -23,8 +23,18 @@ jobs:
           ssh -t -p ${{ secrets.SSH_HOST_PORT }} -l ${{ secrets.SSH_USER }} ${{ secrets.SSH_HOST_IP }} << EOF
             cd /home/${{ secrets.SSH_USER }}/aed-mapa-dev/
             git pull
+            rm -rf /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
+            mkdir /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
+            rsync --recursive \
+              --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
+              --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' \
+              --quiet /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
+            sed --quiet 's/<< oauth_consumer_key >>/${{ secrets.OAUTH_CONSUMER_KEY }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet 's/<< oauth_secret >>/${{ secrets.OAUTH_SECRET }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet 's/<< url >>/${{ secrets.URL }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             rsync --update --recursive --delete \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' \
-              --verbose /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /var/www/dev/
+              --verbose /home/${{ secrets.SSH_USER }}/temp_deploy_dev/ /var/www/dev/
+            rm -rf /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
           EOF
