--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -27,14 +27,14 @@ jobs:
             mkdir /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
             rsync --recursive \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
-              --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' \
+              --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
               --quiet /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
             sed --quiet 's/<< oauth_consumer_key >>/${{ secrets.OAUTH_CONSUMER_KEY }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             sed --quiet 's/<< oauth_secret >>/${{ secrets.OAUTH_SECRET }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             sed --quiet 's/<< url >>/${{ secrets.URL }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             rsync --update --recursive --delete \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
-              --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' \
+              --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
               --verbose /home/${{ secrets.SSH_USER }}/temp_deploy_dev/ /var/www/dev/
             rm -rf /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
           EOF
