added missing environment parameter

--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -11,6 +11,7 @@ jobs:
   deploy:
     name: Deploy to dev env
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Install SSH Key
         uses: kielabokkie/ssh-key-and-known-hosts-action@v1
