--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Run deploy script on host
         run: |
           ssh -t -p ${{ secrets.SSH_HOST_PORT }} -l ${{ secrets.SSH_USER }} ${{ secrets.SSH_HOST_IP }} << EOF
+            set -e
             cd /home/${{ secrets.SSH_USER }}/aed-mapa-dev/
             git pull
             rm -rf /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
@@ -30,9 +31,9 @@ jobs:
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
               --quiet /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
-            sed --quiet 's/<< oauth_consumer_key >>/${{ secrets.OAUTH_CONSUMER_KEY }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            sed --quiet 's/<< oauth_secret >>/${{ secrets.OAUTH_SECRET }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            sed --quiet 's/<< url >>/${{ secrets.URL }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet -i 's/<< oauth_consumer_key >>/${{ secrets.OAUTH_CONSUMER_KEY }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet -i 's/<< oauth_secret >>/${{ secrets.OAUTH_SECRET }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet -i 's|<< url >>|${{ secrets.URL }}|' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             rsync --update --recursive --delete \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
