--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -32,8 +32,11 @@ jobs:
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
               --quiet /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
             sed --quiet -i 's/<< oauth_consumer_key >>/${{ secrets.OAUTH_CONSUMER_KEY }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            head /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             sed --quiet -i 's/<< oauth_secret >>/${{ secrets.OAUTH_SECRET }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            head /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             sed --quiet -i 's|<< url >>|${{ secrets.URL }}|' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            head /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             rsync --update --recursive --delete \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
