--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -20,6 +20,10 @@ jobs:
           ssh-host: ${{ secrets.SSH_HOST_IP }}
           ssh-port: ${{ secrets.SSH_HOST_PORT }}
       - name: Run deploy script on host
+        env:
+          OAUTH_CONSUMER_KEY: ${{ secrets.OAUTH_CONSUMER_KEY }}
+          OAUTH_SECRET: ${{ secrets.OAUTH_SECRET }}
+          OSM_API_URL: ${{ secrets.URL }}
         run: |
           ssh -t -p ${{ secrets.SSH_HOST_PORT }} -l ${{ secrets.SSH_USER }} ${{ secrets.SSH_HOST_IP }} << EOF
             set -e
@@ -31,12 +35,9 @@ jobs:
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
               --quiet /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
-            sed --quiet -i 's/<< oauth_consumer_key >>/${{ secrets.OAUTH_CONSUMER_KEY }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            head /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            sed --quiet -i 's/<< oauth_secret >>/${{ secrets.OAUTH_SECRET }}/' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            head /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            sed --quiet -i 's|<< url >>|${{ secrets.URL }}|' /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            head /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet -i "s/<< oauth_consumer_key >>/$OAUTH_CONSUMER_KEY/" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet -i "s/<< oauth_secret >>/$OAUTH_SECRET/" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed --quiet -i "s|<< url >>|$OSM_API_URL|" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             rsync --update --recursive --delete \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
