--- a/.github/workflows/deploy_to_dev.yaml
+++ b/.github/workflows/deploy_to_dev.yaml
@@ -26,6 +26,7 @@ jobs:
           OSM_API_URL: ${{ secrets.URL }}
         run: |
           ssh -t -p ${{ secrets.SSH_HOST_PORT }} -l ${{ secrets.SSH_USER }} ${{ secrets.SSH_HOST_IP }} << EOF
+            set -e
             cd /home/${{ secrets.SSH_USER }}/aed-mapa-dev/
             git pull
             rm -rf /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
@@ -34,9 +35,7 @@ jobs:
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
               --quiet /home/${{ secrets.SSH_USER }}/aed-mapa-dev/ /home/${{ secrets.SSH_USER }}/temp_deploy_dev/
-            sed --quiet -i "s/<< oauth_consumer_key >>/$OAUTH_CONSUMER_KEY/" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            sed --quiet -i "s/<< oauth_secret >>/$OAUTH_SECRET/" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
-            sed --quiet -i "s|<< url >>|$OSM_API_URL|" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
+            sed -i "s/<< oauth_consumer_key >>/$OAUTH_CONSUMER_KEY/;s/<< oauth_secret >>/$OAUTH_SECRET/;s|<< url >>|$OSM_API_URL|" /home/${{ secrets.SSH_USER }}/temp_deploy_dev/src/osm-integration.js
             rsync --update --recursive --delete \
               --exclude '*.py' --exclude '*.geojson' --exclude '.git*' --exclude 'aed_poland_metadata.json' \
               --exclude 'requirements.txt' --exclude 'LICENSE' --exclude 'README.md' --exclude '*.ods' --exclude '*.csv' \
