--- a/.github/workflows/deploy_to_prod.yaml
+++ b/.github/workflows/deploy_to_prod.yaml
@@ -6,6 +6,12 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - README.md
+      - .gitignore
+      - LICENSE
+      - aed_poland.*
+      - aed_poland_metadata.json
 
 jobs:
   deploy:
